experimenting with the skia canvas

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,8 +2,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:avaloniaAnimation="clr-namespace:avalonia_animation"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="avalonia_animation.MainWindow"
         Title="avalonia_animation" Width="1300" Height="1100">
-    <Canvas Name="CanvasDrawingBoard" Width="1200" Height="1000" Background="Gainsboro" />
+    <TabControl>
+        <TabItem Header="Canvas">
+            <Grid RowDefinitions="Auto,*">
+                <WrapPanel Grid.Row="0" Orientation="Horizontal">
+                    <Button Content="Start" Click="CanvasStart_Click"/>
+                    <Button Content="Stop" Click="CanvasStop_Click"/>
+                </WrapPanel>
+                <Canvas Grid.Row="1" Name="CanvasDrawingBoard" Width="1200" Height="1000" Background="Gainsboro" />
+            </Grid>
+        </TabItem>
+        <TabItem Header="CustomSkia">
+            <Grid RowDefinitions="Auto,*">
+                <WrapPanel Grid.Row="0" Orientation="Horizontal">
+                    <Button Content="Start" Click="CustomSkiaStart_Click"/>
+                    <Button Content="Stop" Click="CustomSkiaStop_Click"/>
+                </WrapPanel>
+                <avaloniaAnimation:ElementRenderer Grid.Row="1" Name="CustomSkia" Width="1200" Height="1000" />
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
